plugins {
    id 'java'
}

group 'ru.nikon.petr'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.openjdk.jmh:jmh-core:1.11.2'
    annotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.11.2'

    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'

    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
}

test {
    useJUnitPlatform()
}

sourceSets {
    main {
        java.srcDirs += "${rootDir}build/generated/sources/accessors/java/main"
    }
}

clean.doFirst {
    delete "${rootDir}build/generated/sources/accessors"
}

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

